--- a/bulletin/templates/bulletin/sports.html
+++ b/bulletin/templates/bulletin/sports.html
@@ -113,7 +113,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Spirit Fest</a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'bulletin/images/logo.jpg' %}" alt="Logo" height="50" width="50">  Campus Connect
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
