--- a/announcements/templates/announcements/a_home.html
+++ b/announcements/templates/announcements/a_home.html
@@ -19,7 +19,7 @@
                                         <img class="rounded-circle me-3" src="{{ announcement.author.profile.image.url }}" style="width: 60px; height: 60px; object-fit: cover;">
                                         <div class="media-body">
                                             <div class="article-metadata mb-2">
-                                                <a class="text-decoration-none" href="#">{{ announcement.author }}</a>
+                                                <a class="text-decoration-none" href="{% url 'user-announcement' announcement.author.username %}">{{ announcement.author }}</a>
                                                 <small class="text-muted ms-2">{{ announcement.date_posted|date:"F d, Y" }}</small>
                                             </div>
                                             <h2 class="h5"><a class="article-title text-decoration-none text-dark" href="{% url 'announcement-detail' announcement.id %}">{{ announcement.title }}</a></h2>
@@ -38,8 +38,30 @@
                                 <p class="text-muted">Be the first one to make an announcement!</p>
                             </div>
                         {% endfor %}
+                        {% if is_paginated %}
+
+                        {% if page_obj.has_previous %}
+                        <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+                        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                        {% endif %}
+                
+                        {% for num in page_obj.paginator.page_range %}
+                        {% if page_obj.number == num %}
+                            <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                            <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                        {% endif %}
+                        {% endfor %}
+                
+                        {% if page_obj.has_next %}
+                        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+                        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+                        {% endif %}
+                
+                    {% endif %}
                     </div>
                 </div>
             </div>
         </div>
+        
 {% endblock announcement %}
