--- a/bulletin/templates/bulletin/index.html
+++ b/bulletin/templates/bulletin/index.html
@@ -15,30 +15,42 @@
         </div>
     {% endif %}
 
-    <div id="announcementCarousel" class="carousel slide mb-5" data-ride="carousel">
-        <div class="carousel-inner">
-            {% for announcement in announcements %}
-                <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    <div class="d-flex justify-content-center">
-                        <p class="text-dark bg-warning px-4 py-2 rounded-pill">{{ announcement.text }}</p>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-        <a class="carousel-control-prev" href="#" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+    <!-- Hero Section -->  
+    
+    
     
 
     <div class="text-center mb-5">
         <h1 class="display-4">College News</h1>
     </div>
+    <section class="max-width:100%" style="background-color: #eee;">
+        <div class="container-fluid py-2" style="max-width: 98%;">
+        <main role="main" class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="container my-3">
+                    <div class="row bg-light text-black p-3 rounded">
+                        <div class="col-md-5 d-flex flex-column align-items-center">
+                            <h5>Announcements</h5>
+                            <a href="announcements/" class="btn btn-outline-secondary rounded-pill mt-2 ">Go to Announcements  <i class="ml-3 fas fa-dove"></i></a>
+                        </div>
+                        <div class="col-md-2 d-flex justify-content-center align-items-center">
+                            <div class="border-end border-light" style="height: 50px;"></div>
+                        </div>
+                        <div class="col-md-5 d-flex flex-column align-items-center">
+                            <h5>Events</h5>
+                            <a href="{% url 'calendar' %}" class="btn btn-outline-secondary rounded-pill mt-2">Go to Events  <i class="ml-3 far fa-calendar-alt"></i></a>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </main>
+        </div>
+        </section>
+    
+    
+
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card h-100">
